    add_subdirectory(Example01)
    add_subdirectory(Example02)
    add_subdirectory(Example02a)
    add_subdirectory(Example02b)
    add_subdirectory(Example03)
    add_subdirectory(Example04)
    add_subdirectory(Example4a)
    add_subdirectory(Example05)
    add_subdirectory(Example06)
    add_subdirectory(Example07)
    add_subdirectory(Example07a)
    add_subdirectory(Example07b)
    add_subdirectory(Example07c)
    add_subdirectory(Example08)
    add_subdirectory(Example09)
    add_subdirectory(Example9a)
    if ("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
        add_subdirectory(Example9b)
    endif()
    add_subdirectory(Example10)
